--- a/iExcelNetwork/Properties/Resources.resx
+++ b/iExcelNetwork/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="how_it_works_22" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\how_it_works_22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Network_Properties2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Network_Properties2.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
