Added icon to Network properties form

--- a/iExcelNetwork/NetworkProperty/NetworkPropertiesForm.resx
+++ b/iExcelNetwork/NetworkProperty/NetworkPropertiesForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAL8OAAC/DgAAAAAAAAAA
+        AACXjoz/gHVy/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5
+        d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5d/+EeXf/hHl3/4R5
+        d/+AdXP/kYeF/5mOjv/29fT/+vr6//r6+f/6+vn/+vr5//r6+f/6+vn/+vr5//r6+f/6+vn/+vr5//r6
+        +f/6+vn/+vr5//r6+f/6+vn/+vr5//r6+f/6+vn/+vr5//r6+f/6+vn/+vr5//r6+f/6+vn/+vr5//r6
+        +f/6+vn/+vr6//f39/+akZD/pJub////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////6efnv+km5v///////////////////////////////////////f2
+        9v/HwMD/0cvL//3+/f//////////////////////////////////////////////////////////////
+        ////////////////////////////////////////p5+e/6Sbm/////////////////////////////z7
+        +//Tzs//1M7P/1dvSP9vfGH/3trc/9rU1f///////////////////////////////////////v7+//Lx
+        8f/v7e3/7+3t/+/t7f/v7e3/7+3t//b29v////////////////+nn57/pJub////////////////////
+        ////////wb66/1drSP9sb1z/WKJQ/1yMUf9scFz/ZnNV/+Db2///////////////////////////////
+        ///29fX/o5qZ/4+Dgv+QhIT/kISE/5CEhP+OgoL/wbu6/////////////////6efnv+km5v/////////
+        //////////////////+ioJr/UZ1J/1e8U/9Vs1D/VLFP/1W4Uf9ViEn/yMLC////////////////////
+        //////////////7+/v/29fX/8/Ly//Pz8//z8/P/8/Pz//Py8v/5+Pj/////////////////p5+e/6Sb
+        m///////////////////////+Pf4/7Wtrf9WmU3/V59P/4WFeP93gGr/U6tN/2iAW//a09X//Pv7////
+        ////////////////////////////////////////////////////////////////////////////////
+        //+nn57/pJub///////////////////////Cvbv/VHNG/1W2Uf9+kHL/+fb4/+bg4/9kj1v/U6BM/2Jx
+        VP/i3t7//////+3s7P+im5r/mpKQ/5qRkP+noJ//9PT0/9vY2P+ck5P/3tvb////////////////////
+        /////////////6efnv+km5v//////////////////////7i1sf9NkEP/WMFV/46Zgv//////9fHz/3CQ
+        Zf9Wv1P/VH5I/93Y2P//////+Pj4/9rX1//X1NP/19PT/9zZ2f/7+/v/8fDw/9jU1P/y8fH/////////
+        ////////////////////////p5+e/6Sbm///////////////////////4+Dg/4OCdv9VrE//YotX/8S7
+        vP+upqT/V5hO/12IUv+lnJr/8fDw////////////////////////////////////////////////////
+        //////////////////////////////////+nn57/pJub////////////////////////////tbGv/1Wf
+        Tf9ax1j/VIlJ/1SUS/9ay1n/YYZU/9/a2///////////////////////////////////////////////
+        /////////////////////////////////////////////6efnv+km5v/////////////////////////
+        //+in5n/TIRB/1GSSP9ayVr/V7ZT/1GGRP9Se0T/x8DB////////////////////////////////////
+        ////////////////////////////////////////////////////////p5+e/6Sbm///////////////
+        /////////////+3r6/+YkI3/nZKR/0+GRf9ff1P/qZ+f/6Sdmv/6+fn/////////////////////////
+        ////////////////////////+Pf3/+Le3f/u7Ov///////////////////////////+nn57/pJub////
+        ///////////////////////////////+///r6ur/hIN6/5mXkP/5+fn//v7+////////////////////
+        /////////////////////////Pz7/+7s6//Nycn/Rmdt/46Vlv/z8O//8/Hx/////////////////6ef
+        nv+km5v////////////////////////////////////////////8+/z//fz9////////////////////
+        //////////////////////////////////++vr//Y29x/35+ff8hn7j/XIGK/3l8e/+Ij4//+Pf2////
+        ////////p5+e/6Sbm///////////////////////////////////////////////////////////////
+        ////////////////////////////////////////+/n5/3aEh/8cn7n/H5yz/xuryv8foLj/H6G8/zt7
+        hv/b1dP///////////+nn57/pJub////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////v7/p6Sk/yCbs/9DhpT/iIqL/1R/
+        iP8bq8j/cYaL//Xx8P///////////6efnv+km5v/////////////////////////////////////////
+        /////////////9TQ0P+5srL/urOz/7mysv/Szs7//v7+/////////////////7e0tP9KdXz/KZCh/7m1
+        tP//////1M3M/zmLm/88gI//hoiJ//Tz8v//////p5+e/6Sbm///////////////////////////////
+        ////////////////////////zcvL/6+qqv+wq6v/r6qq/8zJyf/+/v7/////////////////k5ye/xam
+        wv86lKb/493c///////28fD/V5Ge/xO73P9If4j/7+rq//////+nn57/pJub////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //++urn/TnV+/y6Mnv/JxMP//////+Lb2v9Aipn/PICM/4+Pjv/19PT//////6efnv+km5v/////////
+        ////////7ezs/9nW1v/a19f/2tfX/9rX1//a19f/2tfX/9rX1//Z19b/3dva//n5+f//////////////
+        //////////////////+cnp//H5u1/1mDi/+rpKL/boSH/x2mwf9ph4z/9fHw////////////p5+e/6Sb
+        m//////////////////Nycn/lI2N/5WOjv+Vjo7/lY6O/5WOjv+Vjo7/lY6O/5WNjf+fmJj/7u3t////
+        ////////////////////////+/n5/3eEh/8cn7r/HZ63/yCZsv8enbb/HaG7/z17hf/b1dP/////////
+        //+nn57/pJub///////////////////////+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v//////////////////////////////////////ysfH/2xxcf9ueXz/HqO//1CAiv99e3v/k5WW//r5
+        +f///////////6efnv+km5v/////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////+/f3/9PLy/9DKyv9SZ23/lJeZ//f1
+        9f/39vb/////////////////p5+e/6Sbm///////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////+/v6/+3o
+        5//08vL///////////////////////////+nn57/nZOU//Lv8P/y7/D/8u/w//Lv8P/y8PH/8vDw//Lv
+        8P/y7/D/8u/w//Lv8P/y7/D/8u/w//Lv8P/y7/D/8u/w//Lv8P/y7/D/8u/w//Lv8P/y7/D/8u/w//Lv
+        8P/z7/H/8/Hy//Pw8f/y7/D/8u/w//bz9P//////+/j6/6CWlv9ZW0r/aX9c/2p/Xf9qf1z/aoBd/2dv
+        V/9ndVn/an9e/2h/Xv9of17/aH9e/2h/Xv9of17/aH9e/2h/Xv9of17/aX1d/2l8Xf9pfF3/aXxd/2l8
+        Xf9pfF3/aXxd/2l8Xf9pfF3/aXxd/2l8Xf9oe1z/dpVt/6Pko/+Jt4P/U1hC/1KFSP9Tpkz/U6JL/1Wv
+        T/9SnEn/TpJE/1CeSP9LhD//R3w8/0d8PP9HfDz/R3w8/0d8PP9HfDz/R3w8/0h9PP9VtVH/W9Ba/1vO
+        Wv9bzlr/W85a/1rOWv9bzlr/Ws5a/1rMWf9azFn/WsxZ/1rMWf9azln/W9Nb/1rRWv9LhkL/UoZI/115
+        T/9ec1D/WIJL/2RqU/9OjUP/U6hN/1KVRv9QjUP/UI1D/1CNQ/9QjUP/UI1D/1CNQ/9QjUP/UI5E/1Sm
+        Tf9WslH/VrFR/1axUf9WsVH/VrFR/1axUf9XtVL/XdFc/17VX/9e1V7/XtVe/17VXv9e1V7/X9Zf/02L
+        Rf9ZfEz/UZJH/1KSSP9ToUv/UYpF/02NQv9Pmkb/S4A+/0l4O/9JeDv/SXg7/0l4O/9JeDv/SXg7/0l4
+        O/9JeDv/SHc7/0h2Ov9Idjr/SHY6/0h2Ov9Idjr/SHU6/0p/Pf9WvFP/WcdY/1jGV/9Yxlf/WMZX/1jG
+        V/9YxFb/Un1F/56clv9jcFX/YnFU/2JxVP9iclT/YGNP/2FpUf9jc1X/YnJV/2JyVf9jclX/YnJV/2Ny
+        Vf9iclX/YnJV/2NyVf9iclX/Y3JV/2NyVf9iclX/Y3JV/2JyVf9iclX/Y3JV/2NwVP9jcFT/Y3BU/2Nw
+        VP9jcFT/Y3BU/2NuVP+XlYz/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
