BuildNetwork button is moved to SplitButton control. Clicking on SplitButton default Button is Build netwrok Button.

--- a/ExcelAddIn/MainRibbon.resx
+++ b/ExcelAddIn/MainRibbon.resx
@@ -220,10 +220,10 @@
         YEoCBcCUBAqAKQkUAFMSKACmJFAATOl/AO534g/TzPcUAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btn_buildNetwork.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="splitButton_BuildNetwrok.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAOcAAADaCAYAAABdEFVTAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAElxJREFUeF7tnd+LXdUVx/2fBPFNqE/2pfjkm2/StxIMmIZiqVRQCULTH0ikhdKI
+        vwAADr8BOAVTJAAAElxJREFUeF7tnd+LXdUVx/2fBPFNqE/2pfjkm2/StxIMmIZiqVRQCULTH0ikhdKI
         WCxE0IbSkCqEtKKkjbZRa4lYDSQt0tjRNqEtnPI5mTWc2TP33nPu2T/W3uf7gYVx7p1778ycz1l7r7XP
         Pnd1QgiX3BV+QQjhA8kphFMkpxBOkZxCOEVyCuEUySmEUySnEE6RnKIYf//3l318+uXne/8mxB0kp8jK
         h59/1p395MPuFx9d6eOlq3/cF/Z1nsNzb9++Hb7EYpCcIjlkw9/e+OsBATeFPR9Rl5hRJadIikkZijc1
